--- a/teams.yml
+++ b/teams.yml
@@ -109,7 +109,7 @@ teams:
       - species: "GOLEM"
         nickname: "PEWTER"
       - species: "SEAKING"
-        nickname: "CERULEAN"
+        nickname: "CINNABAR"
       - species: "WEEZING"
         nickname: "FUCHSIA"
       - species: "MAGNETON"
@@ -117,19 +117,29 @@ teams:
       - species: "WIGGLYTUFF"
         nickname: "LAVENDER"
       - species: "PINSIR"
-        nickname: "CINNABAR"
+        nickname: "INDIGO"
 
   - team: "Status masters"
     members:
       - species: "GARDEVOIR"
         nickname: "SLEEPDEMON"
       - species: "MANECTRIC"
-        nickname: "LIVEWIRE"
+        nickname: "POWERSURGE"
       - species: "MUK"
-        nickname: "TOXICITY"
+        nickname: "OILSPILL"
       - species: "SPINDA"
         nickname: "PANDEMONIA"
       - species: "NINETALES"
         nickname: "HEATSTROKE"
       - species: "GLALIE"
         nickname: "FROSTBITE"
+
+  - team: "Obscura"
+    members:
+      - species: "DELCATTY"
+      - species: "SHEDINJA"
+      - species: "VOLBEAT"
+      - species: "CRADILY"
+      - species: "CHIMECHO"
+      - species: "HUNTAIL"
+
