--- a/teams.yml
+++ b/teams.yml
@@ -159,7 +159,7 @@ teams:
       - species: "DELCATTY"
       - species: "SHEDINJA"
       - species: "ILLUMISE"
-      - species: "GIRAFARIG"
+      - species: "SABLEYE"
       - species: "CHIMECHO"
       - species: "HUNTAIL"
 
@@ -198,7 +198,7 @@ teams:
     members:
       - species: "SHIFTRY"
       - species: "WAILORD"
-      - species: "MANECTRIC"
+      - species: "GIRAFARIG"
       - species: "REGIROCK"
       - species: "REGICE"
       - species: "REGISTEEL"
