update to teams

--- a/teams.yml
+++ b/teams.yml
@@ -159,7 +159,7 @@ teams:
       - species: "DELCATTY"
       - species: "SHEDINJA"
       - species: "ILLUMISE"
-      - species: "SABLEYE"
+      - species: "ABSOL"
       - species: "CHIMECHO"
       - species: "HUNTAIL"
 
